--- a/distributed-computing/CMakeLists.txt
+++ b/distributed-computing/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.29)
-project(distributed_computing C)
+project(dlab1_fake C)
 
-set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD 99)
 
-add_executable(distributed_computing main.c)
+add_executable(dlab1_fake logger.c ipc.c main.c)
